# ZnF

./: acquire.py  plot.py  zfs2ply.py  zfs2ply_ascii.py  zfs_decode.py
cpp/: CMakeLists.txt  ZnF9020.cpp  ZnF9020.h  acquire.cpp  plotter.cpp
sdk/usr/include/zf/Common/: CmdFW.h  CmdParse.h  CommonCmd.h  DataClasses.h  Errors.h  FHTools.h  MathUtils.h  MyIP.h  PlugInsDlg.h  ProgressDlg.h  StdAfx.h  TCPCmd.h  common_api.h  def.h  filename.h  fw.h  idx.h  inttypes_.h  processenum.h  taskutil.h  tempdir.h  typ.h  unicode.h  utf.h  zfiofile.h  zfstring.h
sdk/usr/include/zf/LRV/QTools/: QToolsApi.h  VirtualJoystick.h  buttonmenu.h  buttonmenulayout.h  colorimageview.hpp  colortools.hpp  filterutils.h  metadatafactory.hpp  metadatawidget.hpp
sdk/usr/include/zf/LRV/zfstools/: Tools.h  ZfsToolsAPI.h  continousscanpiecesfinder.h  panoramaimagetophysicalscanmapper.h  polyline.h  scan_to_pano_mapper.h  selectionmapper.h  selectionmapperimplementations.h  twospacesrect.h  zfsheaderreaderwriter.h
sdk/usr/include/zf/lrcsocket/: Client.h  devs.h  infostream.h  linecache.h  linestream.h  linestreamaccess.h  lrc.h  lrc_def.h  lrcctrl_if.h  lrcsocket.h  lrcsocket_config.h  lrcsocketapi.h  ports.h  stream.h  tcpstreaming.h  udplinestream.h  udpstream.h
sdk/usr/include/zf/lrcsocket/platform/: platform.h  sock.h  tools.h  win.h  zfsocket.h
sdk/usr/include/zf/lrcsocket/socket/: Client.h  Server.h  UdpRead.h  UdpWrite.h  ip.h  socket.h  zfports.h
sdk/usr/include/zf/zfcore/: app.h  arg.h  compiler.h  compiler_windows.h  disk.h  exception.h  execute.h  fileflag.h  filename.h  log.h  minidump.h  progress.h  sleep.h  string_cmdline.h  string_split.h  string_tools.h  thread_async.h  thread_tools.h  threadpool.h  time_tools.h  timemeasurement.h  tinyxml2.h  trace.h  unicode.h  utf.h  uuid.h  version.h  zfcore.h  zfcore_api.h  zfexception.h  zffile.h  zfmath.h
sdk/usr/include/zf/zfnav/: file_extensions.h  gps_udp.h  opencv.h  sens.h  sens_io.h  senscalib.h  zfnav.h  zfnav_api.h  zfnav_math.h
sdk/usr/include/zf/zfnav/algo/: AHRS.h  accCalibration.h  barometer.h  gpstools.h  gyroCalibration.h  magCalibration.h  tracking.h  zfQuaternion.h  zfTracking.h  zfimucompensator.h
sdk/usr/include/zf/zfnav/spa/: spa.h
sdk/usr/include/zf/zfs/: 2dselection.h  app.h  atmosphere.h  boundingbox3d.h  check.h  clone.h  color.h  compiler.h  config.h  config_zfs.h  dataaccess.h  decompressing.h  encpixel2angle.h  exception.h  export.h  extension.h  file_extensions.h  file_extensions_alt.h  file_lock.h  flags.h  hsv.h  image.h  jpeg.h  laserspotsize.h  layer.h  layer_impl.h  layer_tools.h  license.h  linebyline.h  linebyline_file.h  linebyline_inl.h  linebyline_list.h  linebyline_mask.h  linebyline_pixel.h  linebyline_smart.h  linebyline_tools.h  linebyline_wite.h  lineheader.h  loadctrl.h  map.h  (+79 more)
sdk/usr/include/zf/zfs/Math/: angleToPix.h  box.h  constants.h  line.h  math.h  matrix.h  plane.h  rgb.h  rgb_tools.h  zfvec.h  (+2 more)
sdk/usr/include/zf/zfsfilter/: EdgeAnalysisIntensity.h  ExtendedKalmanFilter.h  KalmanFilter.h  MPWStatistics.h  Matrix.h  MixedPixelFilterDef.h  MixedPixelFilterEnhanced.h  MixedPixelFilterEnhancedLBL.h  MixedPixelFilterEnhanced_Params.h  MixedPixelKalmanFilter.h  MixedPixelKalmanProcessing.h  Nonius.h  NormalsAnalysisFilter.h  PostProcessLinearSections.h  PostProcessLinearSectionsYe.h  RollingBuffer.h  Segmentation.h  SinglePixelFilter.h  SmoothingFilter.h  TransferMasks.h  basicfilter.h  binaryimageprocessing.h  binaryobject.h  combine.h  combine_def.h  datasetparam.h  file_input_output.h  filter_config.h  filterapi.h  filterdll.h  filtertable.h  geometric_base.h  gradient.h  image_proc.h  kdtree.h  matrix_stack.h  mixedpixelwidth.h  multithreading_base.h  noniusjump.h  pixelspread.h  (+7 more)
sdk/usr/include/zf/zfsprj/: Project.h  ZFProjectItemScanTyp.h  ZfsPrjBasic.h  c_interface.h  cleanup.h  config.h  coordinatesystems.h  coordinatetransformation.h  create.h  crosscuts.h  defines.h  err.h  file_extensions.h  file_extensions_alt.h  floorplans.h  groups.h  joblist.h  known_targets.h  labels.h  layer.h  links.h  lockedprojectobjects.h  log.h  measurements.h  metadata.h  obj.h  objectexportdelegator.h  overview.h  plane.h  prj_cleanup.h  prj_combine.h  prj_sync_zfs.h  project_items.h  project_lock.h  project_params.h  projectchecker.h  projectobjectstofileexporter.h  projectplanning.h  readTotal.h  register.h  (+32 more)
sdk/usr/include/zf/zftools/: CheckFreeSpace.h  argument.h  cb.h  copyfiles.h  date_and_time.h  dxf.h  dxffilewriter.h  execute.h  file.h  fileexportdatatypes.h  filepath.h  folder.h  folder2.h  gettickcount.h  html.h  inifile.h  log.h  manuf.h  memoryeater.h  memoryusage.h  plot.h  quickxml2.h  realtimestampcounter.h  scantrabasic.h  sleep.h  strtools.h  tinyxml2.h  undo.h  unit.h  valueresetter.h  zeitmessung.h  zfcolordefs.h  zftools.h  zftools_api.h
sdk/usr/include/zf/zfxyz/: zfxyz_def.h  zfxyz_filter.h  zfxyz_handler.h  zfxyz_header.hpp  zfxyz_protocol.hpp  zfxyz_storing.h  zfxyz_wire.hpp  zfxyzapi.h
sdk/usr/lib/: liblrcsocket.so.11.0.2503  libqtools.so.11.0.2503  libzfcore.so.11.0.2503  libzfnav.so.11.0.2503  libzfsprj.so.11.0.2503  libzfssim.so.11.0.2503  libzfstools.so.11.0.2503  libzftools.so.11.0.2503  libzfxyz.so.11.0.2503
sdk/usr/share/applications/: zfonlinevisual.desktop  zftrace.desktop
sdk/usr/share/zf-zfs-sdk/: zf-zfs-sdk-config.cmake  zf-zfs-sdk-targets-release.cmake  zf-zfs-sdk-targets.cmake
sdk/usr/share/zf-zfs-sdk/example/: license.h
sdk/usr/share/zf-zfs-sdk/example/ctrlsocketqt/: CMakeLists.txt  Icon.rc  ReadMe.txt  if.cpp  if.h  main.cpp
sdk/usr/share/zf-zfs-sdk/example/ctrlsocketqt/dialog/: mainwindow.cpp  mainwindow.h  mainwindow.ui
sdk/usr/share/zf-zfs-sdk/example/zfprj/: CMakeLists.txt  main.cpp
sdk/usr/share/zf-zfs-sdk/example/zfs/: CMakeLists.txt  example_imager.cpp  example_imager.h  example_infrared.cpp  example_infrared.h  example_layer.cpp  example_layer.h  example_lineheader.cpp  example_lineheader.h  example_profiler.cpp  example_profiler.h  example_tools.cpp  example_tools.h  example_write.cpp  example_write.h  main.cpp  test.bat
(+573 files in other folders)
